--- a/resources/templates/channel_edit_program.html
+++ b/resources/templates/channel_edit_program.html
@@ -4,9 +4,9 @@
     <small class="direct-name-003-hint direct-name-hint" style="top: 20px; width: 24px; left: 75px;">
         <i class="glyphicon glyphicon-edit" style="color: #555"></i>
     </small>
-    <button class="btn-channel-preview btn btn-default pull-right" title="温馨提示：当前预览为最后一次保存的内容" is_preview="false" style="position: relative; top: 0px; margin-left: 15px;">
+    <button class="btn-channel-preview btn btn-default pull-right" title="<%=language.prompt1%>" is_preview="false" style="position: relative; top: 0px; margin-left: 15px;">
         <i class="fa  fa-play-circle-o"></i>
-        &nbsp&nbsp预览节目
+        &nbsp;&nbsp;<%=language.previewProgram%>
     </button>
 </div>
 
@@ -15,14 +15,14 @@
     <div class="channel-program-timer">
 
         <div class="input-group">
-            <span class="input-group-addon" title="开始时间">
+            <span class="input-group-addon" title="<%=language.strarTime%>">
                 <i class="fa fa fa-calendar-check-o"></i>
             </span>
             <input type="date" class="form-control" data-field="lifetime_start" step="1" value="<%=lifetime_start.match(/([^T]+)T/)[1]%>">
         </div>
 
         <div class="input-group">
-            <span class="input-group-addon" title="失效时间">
+            <span class="input-group-addon" title="<%=language.endTime%>">
                 <i class="fa fa-calendar-times-o"></i>
             </span>
             <input type="date" class="form-control" data-field="lifetime_end" step="1" value="<%=lifetime_end.match(/([^T]+)T/)[1]%>">
@@ -32,7 +32,7 @@
             <div class="input-group-btn"  style="float: left;">
               <button type="button" class="btn btn-danger btn-channel-setup-timer">
                 <i class="fa fa-fw fa-bomb"></i>
-                <b>定时触发</b>
+                <b><%=language.timingTrigger%></b>
               </button>
             </div>
 
@@ -62,26 +62,26 @@
         </div>
 
         <div class="input-group">
-            <span class="input-group-addon" title="生效时间">
+            <span class="input-group-addon" title="<%=language.strarTime%>">
                 <i class="fa fa-calendar-check-o"></i>
             </span>
             <input type="datetime-local" class="form-control" data-field="lifetime_start" step="1" value="<%=lifetime_start%>">
         </div>
         <p style="float: left; position: relative; top: 10px; left: 8px;">-</p>
         <div class="input-group">
-            <span class="input-group-addon" title="失效时间">
+            <span class="input-group-addon" title="<%=language.endTime%>">
                 <i class="fa fa-calendar-times-o"></i>
             </span>
             <input type="datetime-local" class="form-control" data-field="lifetime_end" step="1" value="<%=lifetime_end%>">
         </div>
         <div class="input-group" style="width: 150px;">
-            <span class="input-group-addon"  title="播放时长">
+            <span class="input-group-addon"  title="<%=language.playDuration%>">
                 <i class="glyphicon glyphicon-time"></i>
             </span>
             <div class="program-duration-container"></div>
         </div>
         <div class="input-group" style="width: 100px;   ">
-            <span class="input-group-addon" title="播放次数">
+            <span class="input-group-addon" title="<%=language.playTime%>">
                 <i class="glyphicon glyphicon-time"></i>
             </span>
             <input type="number" class="form-control" data-field="count" value="<%=count%>">
@@ -92,9 +92,9 @@
 <div class="channel-program-body">
     <div class="channel-program-layout">
         <div class="channel-program-layout-header">
-            <span class="channel-program-layout-header-info">模版:<%=layout.name%></span>
-            <span class="channel-program-layout-header-info">宽:<%=layout.width%></span>
-            <span  class="channel-program-layout-header-info">高:<%=layout.height%></span>
+            <span class="channel-program-layout-header-info"><%=language.Layout%>:<%=layout.name%></span>
+            <span class="channel-program-layout-header-info"><%=language.width%>:<%=layout.width%></span>
+            <span  class="channel-program-layout-header-info"><%=language.height%>:<%=layout.height%></span>
 
         </div>
         <div class="channel-program-layout-body">
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="channel-program-widget">
-        正在加载数据
+        <%=language.loading%>...
     </div>
 </div>
 
