--- a/resources/templates/layout_list_dialog.html
+++ b/resources/templates/layout_list_dialog.html
@@ -3,12 +3,12 @@
         <button type="button" class="btn btn-close close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
         </button>
-        <h3 class="modal-title">选择模版</h3>
+        <h3 class="modal-title"><%=selectLayout%></h3>
     </div>
     <div>
         <div class="box-header with-border">
             <div class="has-feedback pull-right">
-                <input type="text" class="layout-list-search form-control input-sm" placeholder="搜索模版">
+                <input type="text" class="layout-list-search form-control input-sm" placeholder="<%=searchLayout%>">
                 <span class="glyphicon glyphicon-search form-control-feedback"></span>
             </div>
         </div>
