--- a/resources/templates/layout_edit_property.html
+++ b/resources/templates/layout_edit_property.html
@@ -1,23 +1,23 @@
 
 
-<small class="direct-name-001-hint direct-name-hint" style="top: 10px; width: 30px;">编辑</small>
+<small class="direct-name-001-hint direct-name-hint" style="top: 10px; width: 30px;"><%=lang.edit%></small>
 <input class="form-control layout-edit-propoties-name direct-name-001" type="text" value="<%=name%>" data-property-id="layout-name" style="margin-left: 15px; font-weight: bold;">
 
 
 
 <div class="input-group layout-editor-property" style="width: 101px;">
-	<label class="col-sm-3 control-label property-name-inline">宽</label>
+	<label class="col-sm-3 control-label property-name-inline"><%=lang.height%></label>
     <input class="form-control" type="text" value="<%=width%>" data-property-id="layout-width"  style="width: 61px;top: 4px; height: 28px; float: right;">
 </div>
 
 <div class="input-group layout-editor-property" style="margin-left: 15px; width: 101px;">
-	<label class="col-sm-3 control-label property-name-inline">高</label>
+	<label class="col-sm-3 control-label property-name-inline"><%=lang.width%></label>
     <input class="form-control" type="text" value="<%=height%>" data-property-id="layout-height" style="width: 61px;top: 4px; height: 28px; float: right;">
 
 </div>
 
 <div class="input-group layout-editor-property" style="margin-left: 32px; width: 72px;">
-	<label class="control-label property-name-inline">背景色</label>
+	<label class="control-label property-name-inline"><%=lang.bgColor%></label>
     <input class="form-control" type="color" value="<%=background_color%>" data-property-id="layout-bg-color" style="width: 25px;top: 4px; height: 28px;float: right; padding: 3px;">
 
 </div>
@@ -25,8 +25,8 @@
 <div class="col-xs-2 layout-editor-property">
 	<!-- <label class="control-label property-name-inline">背景图</label> -->
 	<div class="btn-group" style="width: 200px;">
-		<button type="button" class="btn-layout-editor-background btn btn-primary" style="width: auto">添加背景图</button>
-        <button type="button" class="btn-layout-editor-cancelbackground btn btn-default" style="width: auto">取消背景图</button>
+		<button type="button" class="btn-layout-editor-background btn btn-primary" style="width: auto"><%=lang.addBgcolor%></button>
+        <button type="button" class="btn-layout-editor-cancelbackground btn btn-default" style="width: auto"><%=lang.cancelBgcolor%></button>
 	</div>
 </div>
 
