--- a/resources/templates/layout_edit_widget_property.html
+++ b/resources/templates/layout_edit_widget_property.html
@@ -3,7 +3,7 @@
     </label>
 --> 
 <li style="display: none">
-    <label>当前控件:</label>
+    <label><%=lang.currentCtrl%>:</label>
     <input type="text" readonly="readonly" value="<%=type%>">
 </li>
 
@@ -19,13 +19,13 @@
 </div>
 
 <div class="input-group" class="input-group" style="width: 115px; display: inline; float: left;">
-    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px;">宽</label>
+    <label class="col-sm-3 control-label property-name-inline" title="<%=lang.width%>" style="padding-left: 0px; width: 16px;">W</label>
     <input type="number" value="<%=width%>" class="form-control" data-property-id="widget-width" style="margin-left: 4px; top:4px; width: 80px; height: 28px; line-height: 1">
    
 </div>
 
 <div class="input-group" style="width: 100px;display: inline; float: left;">
-    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px;">高</label>
+    <label class="col-sm-3 control-label property-name-inline" title="<%=lang.height%>" style="padding-left: 0px; width: 16px;">H</label>
     <input type="number" value="<%=height%>" class="form-control" data-property-id="widget-height" style="margin-left: 4px; top:4px; width: 80px; height: 28px; line-height: 1">
     
 </div>
@@ -34,9 +34,9 @@
 
 
 <div class="input-group" style="width: 230px;display: inline; float: left; top: 4px;">
-    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px; margin-right: 4px; top: -4px;">层</label>
-    <button class="btn-layout-editor-zindex-increase btn btn-default btn-sm" style="width: 93px; margin-right:4px;">上移一层</button>
-    <button class="btn-layout-editor-zindex-decrease btn btn-default btn-sm" style="width: 93px">下移一层</button>
+    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px; margin-right: 4px; top: -4px;"><%=lang.layer%></label>
+    <button class="btn-layout-editor-zindex-increase btn btn-default btn-sm" style="width: 93px; margin-right:4px;"><%=lang.upLayer%></button>
+    <button class="btn-layout-editor-zindex-decrease btn btn-default btn-sm" style="width: 93px"><%=lang.downLayer%></button>
 </div>
 
 
