--- a/resources/templates/channel_edit_program.html
+++ b/resources/templates/channel_edit_program.html
@@ -6,7 +6,7 @@
     </small>
     <button class="btn-channel-preview btn btn-default pull-right" title="<%=language.prompt1%>" is_preview="false" style="position: relative; top: 0px; margin-left: 15px;">
         <i class="fa  fa-play-circle-o"></i>
-        &nbsp;&nbsp;<%=language.previewProgram%>
+        &nbsp;<%=language.previewProgram%>
     </button>
 </div>
 
