--- a/resources/templates/layout_edit_main.html
+++ b/resources/templates/layout_edit_main.html
@@ -72,14 +72,14 @@
                         </div>
                         <!-- canvas -->
                         <div class="layout-editor-canvas-title">
-                            <label>&nbsp;<%=canvasArea%></label>
+                            <label>&nbsp;<%=lang.canvasArea%></label>
                             
                             <div class="div-line-i"></div>
                         </div>
                         <div class="layout-editor-canvas"></div>
                         <!-- widget -->
                         <div class="layout-editor-widget">
-                            <label>&nbsp;<%=ctrlProperties%></label>
+                            <label>&nbsp;<%=lang.ctrlProperties%></label>
                             <div class="div-line-i"></div>
                             <!-- propoties -->
                             <ul class="layout-editor-widget-properties">
@@ -91,7 +91,7 @@
 
                     <!-- footer -->
                     <div class="box-footer layout-editor-footer" style="position: absolute; bottom: 0; width: 100%;">
-                        <small class="tips">&nbsp;&nbsp;&nbsp;Step1:<%=promptSteps1%>&nbsp;&nbsp;&nbsp;Step2：<%=promptSteps2%>&nbsp;&nbsp;&nbsp;Step3：<%=promptSteps3%>&nbsp;&nbsp;&nbsp;（<%=promptSteps4%>）</small>
+                        <small class="tips">&nbsp;&nbsp;&nbsp;Step1:<%=lang.promptSteps1%>&nbsp;&nbsp;&nbsp;Step2：<%=lang.promptSteps2%>&nbsp;&nbsp;&nbsp;Step3：<%=lang.promptSteps3%>&nbsp;&nbsp;&nbsp;（<%=lang.promptSteps4%>）</small>
                         
                         
                     </div>
