--- a/resources/templates/layout_edit_widget_property.html
+++ b/resources/templates/layout_edit_widget_property.html
@@ -34,7 +34,7 @@
 
 
 <div class="input-group" style="width: 230px;display: inline; float: left; top: 4px;">
-    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px; margin-right: 4px; top: -4px;"><%=lang.layer%></label>
+    <label class="col-sm-3 control-label property-name-inline" title="<%=lang.layer%>" style="padding-left: 0px; width: 16px; margin-right: 4px; top: -4px;">L</label>
     <button class="btn-layout-editor-zindex-increase btn btn-default btn-sm" style="width: 93px; margin-right:4px;"><%=lang.upLayer%></button>
     <button class="btn-layout-editor-zindex-decrease btn btn-default btn-sm" style="width: 93px"><%=lang.downLayer%></button>
 </div>
