--- a/resources/templates/layout_edit_property.html
+++ b/resources/templates/layout_edit_property.html
@@ -5,18 +5,18 @@
 
 
 
-<div class="input-group layout-editor-property" style="width: 101px;">
+<div class="input-group layout-editor-property">
 	<label class="col-sm-3 control-label property-name-inline"><%=lang.height%></label>
     <input class="form-control" type="text" value="<%=width%>" data-property-id="layout-width"  style="width: 61px;top: 4px; height: 28px; float: right;">
 </div>
 
-<div class="input-group layout-editor-property" style="margin-left: 15px; width: 101px;">
+<div class="input-group layout-editor-property">
 	<label class="col-sm-3 control-label property-name-inline"><%=lang.width%></label>
     <input class="form-control" type="text" value="<%=height%>" data-property-id="layout-height" style="width: 61px;top: 4px; height: 28px; float: right;">
 
 </div>
 
-<div class="input-group layout-editor-property" style="margin-left: 32px; width: 72px;">
+<div class="input-group layout-editor-property" style="margin-left: 32px;">
 	<label class="control-label property-name-inline"><%=lang.bgColor%></label>
     <input class="form-control" type="color" value="<%=background_color%>" data-property-id="layout-bg-color" style="width: 25px;top: 4px; height: 28px;float: right; padding: 3px;">
 
@@ -24,7 +24,7 @@
 
 <div class="col-xs-2 layout-editor-property">
 	<!-- <label class="control-label property-name-inline">背景图</label> -->
-	<div class="btn-group" style="width: 200px;">
+	<div class="btn-group" style="width: 350px;">
 		<button type="button" class="btn-layout-editor-background btn btn-primary" style="width: auto"><%=lang.addBgcolor%></button>
         <button type="button" class="btn-layout-editor-cancelbackground btn btn-default" style="width: auto"><%=lang.cancelBgcolor%></button>
 	</div>
