--- a/resources/templates/layout_edit_main.html
+++ b/resources/templates/layout_edit_main.html
@@ -36,36 +36,36 @@
                         <div class="layout-editor-toolbar">
                             <label style="margin-left: 20px"><%=lang.toolbar%></label>
                             
-                            <div class="div-line-i" style="width: 85px;"></div>
+                            <div class="div-line-i" style="width: 100px;"></div>
                             <div class="btn-group-vertical">
-                                <button data-widget-id="video" class="btn btn-default btn-add-widget">
+                                <button data-widget-id="video" class="btn btn-default btn-add-widget btn-layout-control">
                                     <i class="glyphicon glyphicon glyphicon-film"></i>&nbsp;&nbsp;&nbsp;<%=lang.video%>&nbsp;
                                 </button>
-                                <button data-widget-id="image" class="btn btn-default  btn-add-widget">
+                                <button data-widget-id="image" class="btn btn-default  btn-add-widget btn-layout-control">
                                     <i class="glyphicon glyphicon-picture"></i>&nbsp;&nbsp;&nbsp;<%=lang.image%>&nbsp;
                                 </button>
-                                <button data-widget-id="html" class="btn btn-default  btn-add-widget">
+                                <button data-widget-id="html" class="btn btn-default  btn-add-widget btn-layout-control">
                                     <i class="glyphicon glyphicon-font"></i>&nbsp;&nbsp;&nbsp;<%=lang.text%>&nbsp;
                                 </button>
-                                <button data-widget-id="clock" class="btn btn-default  btn-add-widget">
+                                <button data-widget-id="clock" class="btn btn-default  btn-add-widget btn-layout-control">
                                     <i class="glyphicon glyphicon-time"></i>&nbsp;&nbsp;&nbsp;<%=lang.clock%>&nbsp;
                                 </button>
-                                <button data-widget-id="weather" class="btn btn-default  btn-add-widget">
+                                <button data-widget-id="weather" class="btn btn-default  btn-add-widget btn-layout-control">
                                     <i class="glyphicon glyphicon-cloud"></i>&nbsp;&nbsp;&nbsp;<%=lang.weather%>&nbsp;
                                 </button>
-                                <button data-widget-id="office" class="btn btn-default  btn-add-widget">
+                                <button data-widget-id="office" class="btn btn-default  btn-add-widget btn-layout-control">
                                     <i class="glyphicon glyphicon-file"></i>&nbsp;&nbsp;Office
                                 </button>
                             </div>
 
                             <div class="btn-group-vertical" style="margin-top: 15px;">
-                                <button data-widget-id="audio" class="btn btn-default  btn-add-widget">
+                                <button data-widget-id="audio" class="btn btn-default  btn-add-widget btn-layout-control">
                                     <i class="glyphicon glyphicon-music"></i>&nbsp;&nbsp;&nbsp;<%=lang.music%>&nbsp;
                                 </button>
                             </div>
 
                             <div class="btn-group-vertical" style="margin-top: 15px;">
-                                <button class="btn btn-default btn-layout-editor-delete-widget">
+                                <button class="btn btn-default btn-layout-editor-delete-widget btn-layout-control">
                                     <i class="glyphicon glyphicon-trash"></i>&nbsp;&nbsp;&nbsp;<%=lang.delete%>&nbsp;
                                 </button>
                             </div>
