--- a/resources/css/pages/layout/edit.css
+++ b/resources/css/pages/layout/edit.css
@@ -38,7 +38,6 @@
 
 .layout-editor-toolbar{
     padding-top: 15px;
-    padding-left: 8px;
     width: 120px;
     display: inline;
     float: left;
@@ -67,6 +66,11 @@
 
 #layout-editor-wrapper .layout-editor-toolbar li>button {
     width: 100px;
+}
+
+.layout-editor-toolbar .btn-layout-control {
+    width: 100px;
+    text-align: left;
 }
 
 #layout-editor-wrapper .layout-editor-canvas-title {
