--- a/resources/templates/layout_edit_widget_property.html
+++ b/resources/templates/layout_edit_widget_property.html
@@ -10,11 +10,11 @@
 
 
 <div class="input-group" style="width: 115px; display: inline; float: left;">
-    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px;">x</label>
+    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px;">X</label>
     <input type="number" value="<%=left%>" class="form-control"  data-property-id="widget-left" style="margin-left: 4px; top:4px; width: 80px; height: 28px; line-height: 1">
 </div>
 <div class="input-group" style="width: 100px;display: inline; float: left;">
-    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px;">y</label>
+    <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px;">Y</label>
     <input type="number" value="<%=top%>" class="form-control" data-property-id="widget-top" style="margin-left: 4px; top:4px; width: 80px; height: 28px; line-height: 1">
 </div>
 
